# qbz

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  FreeBSD-porting.md  HANDOFF-MERGE.md  LICENSE  README.md  ROADMAP.md  WAYLAND_DIAGNOSTIC_INFO.md  WAYLAND_FIX_TESTING.md  changelog.html  flake.nix  index.html  licenses.html  package-lock.json  package.json  robots.txt  sitemap.xml  snapcraft.yaml  vite.config.js  vite.config.ts
crates/: Cargo.toml
crates/qbz/: Cargo.toml
crates/qbz-app/: Cargo.toml
crates/qbz-app/src/: boot_watchdog.rs  graphics_autoconfig.rs  lib.rs  playback_context.rs  playback_driver.rs  runtime.rs  shell.rs  user_data.rs
crates/qbz-app/src/offline_mode/: mod.rs  store.rs
crates/qbz-app/src/settings/: album_play_history.rs  bundle.rs  daemon_prefs.rs  discover_prefs.rs  image_cache.rs  legal.rs  mod.rs  pinned_items.rs  playback.rs  plex.rs  reco_store.rs  remote_control.rs  scrobblers.rs  subscription.rs  tray.rs
crates/qbz-audio/: Cargo.toml
crates/qbz-audio/src/: alsa_backend.rs  alsa_direct.rs  alsa_error_handler.rs  analyzer_tap.rs  backend.rs  coreaudio_direct.rs  dac_capabilities.rs  dac_probe.rs  diagnostic.rs  dynamic_amplify.rs  jack_backend.rs  lib.rs  loudness.rs  loudness_cache.rs  network_throttle.rs  oss_direct.rs  output_sinks.rs  pipewire_backend.rs  pulse_backend.rs  settings.rs
crates/qbz-audio/src/analysis/: mod.rs  spectral_ribbon.rs
crates/qbz-audio/src/device_reservation/: linux.rs
crates/qbz-audio/src/visualizer/: mod.rs  processor.rs  tapped_source.rs
crates/qbz-cache/: Cargo.toml
crates/qbz-cache/src/: audio_cache.rs  lib.rs  playback_cache.rs
crates/qbz-cast/: Cargo.toml
crates/qbz-cast/src/: errors.rs  lib.rs  media_server.rs
crates/qbz-cast/src/airplay/: device.rs  discovery.rs  mod.rs
crates/qbz-cast/src/chromecast/: device.rs  discovery.rs  (+2 more)
crates/qbz-cmaf/: Cargo.toml
crates/qbz-cmaf/src/: crypto.rs  error.rs  lib.rs  parser.rs
crates/qbz-core/: Cargo.toml
crates/qbz-core/src/: core.rs  error.rs  events.rs  lib.rs  offline_resolve.rs  system_capabilities.rs  traits.rs  types.rs
crates/qbz-credentials/src/: lib.rs
crates/qbz-i18n/src/: lib.rs  plural.rs  po.rs
crates/qbz-integrations/: Cargo.toml
crates/qbz-integrations/src/: discord.rs  error.rs  lib.rs
crates/qbz-library/: Cargo.toml
crates/qbz-library/src/: album_grouping.rs  cue_parser.rs  database.rs  lib.rs  local_playlists.rs  metadata.rs  models.rs  mount_info.rs  scan.rs  scanner.rs  tag_sidecar.rs  tag_writer.rs  thumbnails.rs
crates/qbz-log/src/: install.rs  lib.rs  tee.rs
crates/qbz-media-controls/src/: inhibit.rs  lib.rs  linux.rs  notify.rs
crates/qbz-mixtape/: Cargo.toml
crates/qbz-mixtape/src/: enqueue.rs  lib.rs  repo.rs  schema.rs  shuffle.rs
crates/qbz-models/: Cargo.toml
crates/qbz-models/src/: error.rs  events.rs  lib.rs  mixtape.rs  playback.rs  source.rs  traits.rs  types.rs
crates/qbz-offline-cache/: Cargo.toml
crates/qbz-offline-cache/src/: db.rs  downloader.rs  event.rs  lib.rs  maintenance.rs  playback.rs  purchases_service.rs  purge.rs  secret_vault.rs  state.rs  types.rs
crates/qbz-player/: Cargo.toml
crates/qbz-player/src/: lib.rs  mod.rs  playback_engine.rs  queue.rs
crates/qbz-playlist-import/src/: match_qobuz.rs
crates/qbz-plex/src/: lib.rs
crates/qbz-qobuz/: Cargo.toml
crates/qbz-qobuz/examples/: lyrics_probe.rs
crates/qbz-qobuz/src/: auth.rs  bundle.rs  client.rs  cmaf.rs  endpoints.rs  error.rs  forbidden_breaker.rs  lib.rs  link_resolver.rs  offline_gate.rs  performers.rs  retry.rs
crates/qbz-reco/: Cargo.toml
crates/qbz-reco/src/: builder.rs  lib.rs  sparse_vector.rs  suggestions.rs
crates/qbz-secrets/: Cargo.toml
crates/qbz-secrets/src/: backend.rs  cipher.rs  envelope.rs  error.rs  install_id.rs  lib.rs
crates/qbz-slint/: Cargo.toml  build.rs
crates/qbz-slint/src/: adapter.rs  album.rs  album_map.rs  artist.rs  artist_blacklist.rs  artwork.rs  auth.rs  award.rs  cast_service.rs  dac_wizard.rs  dates.rs  discord_rpc.rs  discover_prefs.rs  drag.rs  fav_cache.rs  favorites.rs  folders.rs  foryou.rs  genre_filter.rs  home.rs  immersive.rs  info_modals.rs  label.rs  local_library.rs  local_library_settings.rs  local_playlist.rs  locallibrary_prefs.rs  lyrics_measure.rs  lyrics_sync.rs  main.rs  miniplayer.rs  mix.rs  myqbz.rs  myqbz_add.rs  myqbz_builder.rs  myqbz_detail.rs  myqbz_edit.rs  myqbz_play.rs  myqbz_prefs.rs  myqbz_view_prefs.rs  (+32 more)
crates/qbz-slint/ui/: app.slint  state.slint
crates/qbz-theme/src/: id.rs  lib.rs  registry.rs
crates/qbz-tui/: Cargo.toml
crates/qbz-tui/src/: adapter.rs  app.rs  credentials.rs  input.rs  lib.rs  playback.rs  qconnect.rs  theme.rs
crates/qbz-ui/ui/: app.slint  state.slint
crates/qbz/packaging/: qbz.desktop
crates/qbz/src/: album.rs  album_map.rs  artist.rs  artwork.rs  auth.rs  award.rs  booklet.rs  cast_service.rs  custom_theme.rs  deep_link.rs  diagnostics.rs  discover_browse.rs  discover_prefs.rs  external_reco.rs  favorites.rs  foryou.rs  genre_filter.rs  home.rs  keybindings.rs  label.rs  library_all.rs  local_library.rs  local_playlist.rs  location_view.rs  lyrics.rs  lyrics_prefs.rs  lyrics_sync.rs  main.rs  media_controls.rs  miniplayer.rs  mix.rs  nav.rs  offline_cache.rs  offline_favorites.rs  offline_manager.rs  pinned.rs  pinned_section.rs  playback.rs  playlist.rs  playlist_browse.rs  (+24 more)
crates/qbzd/: Cargo.toml
crates/qbzd/service-files/: qbzd.openrc  qbzd.runit  qbzd.service  qbzd.toml.example
crates/qbzd/src/: adapter.rs  config.rs  daemon.rs  lock.rs  login.rs  main.rs  mpris.rs  paths.rs  qconnect.rs  resources.rs  scrobble_engine.rs  session.rs  state.rs
crates/qconnect-app/: Cargo.toml
crates/qconnect-app/src/: app.rs  events.rs  lib.rs  renderer.rs  renderer_engine.rs  session.rs  startup.rs  sync_state.rs
crates/qconnect-core/: Cargo.toml
crates/qconnect-core/src/: admission.rs  pending.rs  queue.rs
crates/qconnect-protocol/src/: decoder.rs  event.rs  lib.rs  mapper.rs  queue_command_proto.rs
crates/qconnect-transport-ws/src/: config.rs  error.rs  transport.rs
(+1259 files in other folders)
