[package]
name = "qbz-cast"
version = "0.1.0"
edition = "2021"
description = "Casting support for QBZ - Chromecast, AirPlay, DLNA"

[dependencies]
# Chromecast
rust_cast = "0.18.1"

# mDNS discovery
mdns-sd = "0.11"

# Local HTTP server for media streaming
tiny_http = "0.12"

# DLNA/UPnP
rupnp = { version = "3", features = ["full_device_spec"] }
futures-util = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"

# Logging
log = "0.4"

# Async runtime (for DLNA)
tokio = { version = "1", features = ["rt", "sync"] }
