[package]
name = "qbz-cast"
version = "0.1.0"
edition = "2021"
description = "Casting support for QBZ - Chromecast, DLNA"

[dependencies]
# Chromecast
rust_cast = "0.21"

# TLS provider selection. rust_cast uses rustls; in the multi-crate binary both
# the aws-lc-rs and ring providers end up enabled (reqwest pulls ring), so
# rustls can't auto-pick one and panics on connect. We install aws-lc-rs
# explicitly before connecting (see `ensure_crypto_provider`).
rustls = { version = "0.23", features = ["aws_lc_rs"] }

# mDNS discovery
mdns-sd = "0.11"

# Local HTTP server for media streaming
tiny_http = "0.12"

# DLNA/UPnP
rupnp = { version = "3", features = ["full_device_spec"] }
futures-util = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"

# Logging
log = "0.4"

# CSPRNG for cast media path tokens (not RandomState hash)
getrandom = "0.2"

# Async runtime (for DLNA)
tokio = { version = "1", features = ["rt", "sync"] }
