[package]
name = "qbz-core"
description = "Frontend-agnostic core library for QBZ music player"
version.workspace = true
edition.workspace = true

[dependencies]
# Async
tokio = { workspace = true }
async-trait = { workspace = true }

# HTTP
reqwest = { version = "0.12", features = ["json", "rustls-tls", "cookies"] }

# Error handling
anyhow = "1"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging
log = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Audio decoding
symphonia = { workspace = true }

# Crypto
md-5 = "0.10"
base64 = { workspace = true }

# Time
chrono = "0.4"

# Regex
regex = "1"

# Async utilities
futures-util = "0.3"

# Audio output - using vendored versions from src-tauri
# IMPORTANT: Must use symphonia-all to match qbz-nix config (f32 pipeline)
rodio = { path = "../../src-tauri/vendor/rodio", default-features = false, features = ["symphonia-all"] }
cpal = { path = "../../src-tauri/vendor/cpal" }

[dev-dependencies]
tokio-test = "0.4"
