[package]
name = "qbz-library"
version = "0.1.0"
edition = "2021"
description = "Local music library management for QBZ - scanning, indexing, metadata extraction"
authors = ["blitzkriegfc"]

[dependencies]
# Logging
log = "0.4"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Filesystem
walkdir = "2"
dirs = "5"

# Audio metadata
lofty = "0.18"

# Image processing (thumbnails)
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }

# File system utilities
glob = "0.3"

# UUID generation
uuid = { version = "1", features = ["v4"] }
