[package]
name = "qbz-offline-cache"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Offline cache for QBZ: download-for-offline store, CMAF bundle vault, SQLite index, cached playback resolution (frontend-agnostic)"

[dependencies]
# Sibling crates: the network + crypto + init-parse + library index already live here.
qbz-models = { path = "../qbz-models" }
qbz-qobuz = { path = "../qbz-qobuz" }
qbz-cmaf = { path = "../qbz-cmaf" }
qbz-secrets = { path = "../qbz-secrets" }
qbz-library = { path = "../qbz-library" }

# SQLite index (match qbz-library's version/features)
rusqlite = { version = "0.31", features = ["bundled"] }

# Async runtime + HTTP (download pipeline + artwork)
tokio = { workspace = true }
reqwest = { workspace = true }
futures-util = { workspace = true }

# FLAC tag + artwork embedding (legacy-format post-processing)
lofty = "0.23"

# Platform cache dir (default offline-root location)
dirs = "6"

# DTO serialization (camelCase envelopes shared with the frontend)
serde = { workspace = true }
serde_json = { workspace = true }

# Logging
log = { workspace = true }

[dev-dependencies]
tempfile = "3"
