[package]
name = "qbz-player"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Playback engine and queue management for QBZ"

[dependencies]
qbz-models = { path = "../qbz-models" }
qbz-audio = { path = "../qbz-audio" }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }
futures-util = { workspace = true }
tokio-stream = { workspace = true }

# Logging
log = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Audio decoding
symphonia = { workspace = true }

# Vendored audio libraries (will be copied in Phase 3)
# rodio = { path = "./vendor/rodio", features = ["symphonia-all"] }
# cpal = { path = "./vendor/cpal" }
