[package]
name = "qbz-qobuz"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Qobuz API client for QBZ"

[dependencies]
qbz-models = { path = "../qbz-models" }

# Async
tokio = { workspace = true }

# HTTP
reqwest = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Crypto (for Qobuz auth)
md-5 = { workspace = true }
base64 = { workspace = true }

# Time
chrono = { workspace = true }

# Regex
regex = { workspace = true }

# Logging
log = { workspace = true }

# Error handling
thiserror = { workspace = true }
